--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
             </div>
         </section>
         <!-- end the top section -->
-        <section class="logo">
+        <section class="logos">
             <div class="sub-logo">
                 <img src="logos/Alibaba.svg" alt="">
                 <img src="logos/Amazon.svg" alt="">
@@ -60,7 +60,7 @@
         </section>
         <!-- end the logo section -->
         <section>
-            <div>
+            <div class="section-header-name">
                 <h2>Popular Collection</h2>
             </div>
             <div class="products">
@@ -75,9 +75,154 @@
                             <li></li>
                             <li></li>
                             <li></li>
+                            <li>4.99</li>
                         </div>
                         <p>
-                            Wordwide shifting available Buyers protection possible!
+                            Wordwide shifting <br> available <br> Buyers protection possible!
+                        </p>
+                    </div>
+                </div>
+                <div class="product-box">
+                    <img src="images/tripod.png" alt="">
+                    <div class="box-info">
+                        <h1>Flex Tripod</h1>
+                        <span>$50.48</span>
+                        <div class="star">
+                            <li></li>
+                            <li></li>
+                            <li></li>
+                            <li></li>
+                            <li></li>
+                            <li>4.99</li>
+                        </div>
+                        <p>
+                            Wordwide shifting <br> available <br> Buyers protection possible!
+                        </p>
+                    </div>
+                </div>
+                <div class="product-box">
+                    <img src="images/tripod.png" alt="">
+                    <div class="box-info">
+                        <h1>Flex Tripod</h1>
+                        <span>$50.48</span>
+                        <div class="star">
+                            <li></li>
+                            <li></li>
+                            <li></li>
+                            <li></li>
+                            <li></li>
+                            <li>4.99</li>
+                        </div>
+                        <p>
+                            Wordwide shifting <br> available <br> Buyers protection possible!
+                        </p>
+                    </div>
+                </div>
+                <div class="product-box">
+                    <img src="images/tripod.png" alt="">
+                    <div class="box-info">
+                        <h1>Flex Tripod</h1>
+                        <span>$50.48</span>
+                        <div class="star">
+                            <li></li>
+                            <li></li>
+                            <li></li>
+                            <li></li>
+                            <li></li>
+                            <li>4.99</li>
+                        </div>
+                        <p>
+                            Wordwide shifting <br> available <br> Buyers protection possible!
+                        </p>
+                    </div>
+                </div>
+                <div class="product-box">
+                    <img src="images/tripod.png" alt="">
+                    <div class="box-info">
+                        <h1>Flex Tripod</h1>
+                        <span>$50.48</span>
+                        <div class="star">
+                            <li></li>
+                            <li></li>
+                            <li></li>
+                            <li></li>
+                            <li></li>
+                            <li>4.99</li>
+                        </div>
+                        <p>
+                            Wordwide shifting <br> available <br> Buyers protection possible!
+                        </p>
+                    </div>
+                </div>
+                <div class="product-box">
+                    <img src="images/tripod.png" alt="">
+                    <div class="box-info">
+                        <h1>Flex Tripod</h1>
+                        <span>$50.48</span>
+                        <div class="star">
+                            <li></li>
+                            <li></li>
+                            <li></li>
+                            <li></li>
+                            <li></li>
+                            <li>4.99</li>
+                        </div>
+                        <p>
+                            Wordwide shifting <br> available <br> Buyers protection possible!
+                        </p>
+                    </div>
+                </div>
+                <div class="product-box">
+                    <img src="images/tripod.png" alt="">
+                    <div class="box-info">
+                        <h1>Flex Tripod</h1>
+                        <span>$50.48</span>
+                        <div class="star">
+                            <li></li>
+                            <li></li>
+                            <li></li>
+                            <li></li>
+                            <li></li>
+                            <li>4.99</li>
+                        </div>
+                        <p>
+                            Wordwide shifting <br> available <br> Buyers protection possible!
+                        </p>
+                    </div>
+                </div>
+                <div class="product-box">
+                    <img src="images/tripod.png" alt="">
+                    <div class="box-info">
+                        <h1>Flex Tripod</h1>
+                        <span>$50.48</span>
+                        <div class="star">
+                            <li></li>
+                            <li></li>
+                            <li></li>
+                            <li></li>
+                            <li></li>
+                            <li>4.99</li>
+                        </div>
+                        <p>
+                            Wordwide shifting <br> available <br> Buyers protection possible!
+                        </p>
+                    </div>
+                </div>
+                <div class="product-box">
+                    <img src="images/tripod.png" alt="">
+                    <div class="box-info">
+                        <h1>Flex Tripod</h1>
+                        <span>$50.48</span>
+                        <div class="star">
+                            <li></li>
+                            <li></li>
+                            <li></li>
+                            <li></li>
+                            <li></li>
+                            <li>4.99</li>
+                        </div>
+                        <p>
+                            Wordwide shifting <br> available <br> Buyers protection possible!
                         </p>
                     </div>
                 </div>
