--- a/index.html
+++ b/index.html
@@ -83,7 +83,43 @@
                     </div>
                 </div>
                 <div class="product-box">
-                    <img src="images/tripod.png" alt="">
+                    <img src="images/airpod.png" alt="">
+                    <div class="box-info">
+                        <h1>Flex Tripod</h1>
+                        <span>$50.48</span>
+                        <div class="star">
+                            <li></li>
+                            <li></li>
+                            <li></li>
+                            <li></li>
+                            <li></li>
+                            <li>4.99</li>
+                        </div>
+                        <p>
+                            Wordwide shifting <br> available <br> Buyers protection possible!
+                        </p>
+                    </div>
+                </div>
+                <div class="product-box">
+                    <img src="images/camera.png" alt="">
+                    <div class="box-info">
+                        <h1>Flex Tripod</h1>
+                        <span>$50.48</span>
+                        <div class="star">
+                            <li></li>
+                            <li></li>
+                            <li></li>
+                            <li></li>
+                            <li></li>
+                            <li>4.99</li>
+                        </div>
+                        <p>
+                            Wordwide shifting <br> available <br> Buyers protection possible!
+                        </p>
+                    </div>
+                </div>
+                <div class="product-box">
+                    <img src="images/drone.png" alt="">
                     <div class="box-info">
                         <h1>Flex Tripod</h1>
                         <span>$50.48</span>
@@ -119,7 +155,7 @@
                     </div>
                 </div>
                 <div class="product-box">
-                    <img src="images/tripod.png" alt="">
+                    <img src="images/mic.png" alt="">
                     <div class="box-info">
                         <h1>Flex Tripod</h1>
                         <span>$50.48</span>
@@ -137,7 +173,7 @@
                     </div>
                 </div>
                 <div class="product-box">
-                    <img src="images/tripod.png" alt="">
+                    <img src="images/setup.png" alt="">
                     <div class="box-info">
                         <h1>Flex Tripod</h1>
                         <span>$50.48</span>
@@ -155,7 +191,7 @@
                     </div>
                 </div>
                 <div class="product-box">
-                    <img src="images/tripod.png" alt="">
+                    <img src="images/mic.png" alt="">
                     <div class="box-info">
                         <h1>Flex Tripod</h1>
                         <span>$50.48</span>
@@ -173,43 +209,7 @@
                     </div>
                 </div>
                 <div class="product-box">
-                    <img src="images/tripod.png" alt="">
-                    <div class="box-info">
-                        <h1>Flex Tripod</h1>
-                        <span>$50.48</span>
-                        <div class="star">
-                            <li></li>
-                            <li></li>
-                            <li></li>
-                            <li></li>
-                            <li></li>
-                            <li>4.99</li>
-                        </div>
-                        <p>
-                            Wordwide shifting <br> available <br> Buyers protection possible!
-                        </p>
-                    </div>
-                </div>
-                <div class="product-box">
-                    <img src="images/tripod.png" alt="">
-                    <div class="box-info">
-                        <h1>Flex Tripod</h1>
-                        <span>$50.48</span>
-                        <div class="star">
-                            <li></li>
-                            <li></li>
-                            <li></li>
-                            <li></li>
-                            <li></li>
-                            <li>4.99</li>
-                        </div>
-                        <p>
-                            Wordwide shifting <br> available <br> Buyers protection possible!
-                        </p>
-                    </div>
-                </div>
-                <div class="product-box">
-                    <img src="images/tripod.png" alt="">
+                    <img src="images/lights.png" alt="">
                     <div class="box-info">
                         <h1>Flex Tripod</h1>
                         <span>$50.48</span>
